# sem3_lab10

./: CMakeLists.txt
include/: check_summer.hpp
path/to/input/dbcs-storage.db/: IDENTITY  LOG  LOG.old.1609135082841311  LOG.old.1609135171335485  LOG.old.1609135348470389  MANIFEST-000011  OPTIONS-000018  OPTIONS-000020
path/to/input/storage_db/: IDENTITY  LOG  LOG.old.1609121219484997  LOG.old.1609122680189154  LOG.old.1609134311420291  LOG.old.1609134390047539  LOG.old.1609134416767888  LOG.old.1609134470052011  LOG.old.1609134697621065  LOG.old.1609134855349975  LOG.old.1609135041828846  LOG.old.1609135113646076  LOG.old.1609135348467361  LOG.old.1609135401117460  LOG.old.1609135505127582  LOG.old.1609135565962854  LOG.old.1609205324996501  LOG.old.1609205350832715  LOG.old.1609205354413366  LOG.old.1609205583107277  LOG.old.1609205587944133  LOG.old.1609205618496443  LOG.old.1609205706971688  LOG.old.1609206032214900  LOG.old.1609206121152150  LOG.old.1609206255074452  LOG.old.1609206708634958  LOG.old.1609206821546782  LOG.old.1609207019262855  LOG.old.1609207119714641  LOG.old.1609207255469422  LOG.old.1609209251430749  LOG.old.1609209295232512  LOG.old.1609218877071145  LOG.old.1609219379835098  LOG.old.1609219571012768  LOG.old.1609219578961571  LOG.old.1609219604981058  LOG.old.1609219735421961  MANIFEST-000006  (+2 more)
path/to/output/storage_db/: IDENTITY  LOG  LOG.old.1609135605544804  OPTIONS-000010  OPTIONS-000012
scripts/: checks.sh
sources/: check_summer.cpp  demo.cpp
